--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,8 @@
-[submodule "modules/PX4Firmware"]
-	path = modules/PX4Firmware
-	url = git://github.com/diydrones/PX4Firmware.git
 [submodule "modules/PX4NuttX"]
 	path = modules/PX4NuttX
-	url = git://github.com/diydrones/PX4NuttX.git
-[submodule "modules/uavcan"]
-	path = modules/uavcan
-	url = git://github.com/diydrones/uavcan.git
+	url = git://github.com/diydrones/PX4Nuttx.git
+	branch = master
+[submodule "modules/PX4Firmware"]
+	path = modules/PX4Firmware
+	url = git://github.com/3drobotics/PX4Firmware-solo.git
+	branch = diydrones-rebase
